style form inputs and fix spacing for tablet and desktop

--- a/styles.css
+++ b/styles.css
@@ -124,6 +124,12 @@ input[type=radio] {
     height: 2em;
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
 #welcome {
     background-color: var(--blue-500);
     color: white;
@@ -275,24 +281,30 @@ h1 {
             display: none;
         }
 
-        #height-metric {
-
+        .height-container, .weight-container {
+            position: relative;
         }
 
-        #weight-metric {
-            
+        #cm, #kg {
+            position: absolute;
+            font-size: 1.5rem;
+            color: var(--blue-500);
+            font-weight: 600;
+            top: 33%;
+            right: 10%;
         }
 
-
+        
 /* Media Queries */
 
     @media (min-width: 768px) {
         #form {
-            bottom: -10rem;
+            bottom: -4rem;
         }
 
         header {
-            margin-bottom: 18rem;
+            margin-bottom: 8rem;
+
         }
 
         #measurements {
@@ -349,12 +361,11 @@ h1 {
 
         #container {
             max-width: 1200px;
-            border: 2px solid red;
             align-items: initial;
         }
 
         main {
-            gap: 6rem;
+            gap: 12rem;
         }
 
         header {
@@ -377,11 +388,7 @@ h1 {
             max-width: 500px;
         }
 
-        #measurements {
-            /* flex-direction: row;
-            justify-content: flex-start;
-            gap: 1rem; */
-        }
+       
 
         #curve-left {
         display: block;
@@ -391,7 +398,7 @@ h1 {
     }
 
         #means-hero {
-            
+            margin-bottom: 0;
             grid-template-columns: 1fr 1fr;
             grid-template-rows: initial;
         }
@@ -424,6 +431,7 @@ h1 {
 
         #limitations {
             width: 100%;
+            margin-top: 2rem;
         }
 
 
